<resources>
    <string name="app_name">ASRPERS</string>
    <string name="splash_text">Welcome to my app!</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="home_title">HOME</string>
    <string name="login_title">LOGIN</string>
    <string name="Signup_title">SIGNUP</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="contact_list">CONTACT</string>
    <string name="Logout">LOGOUT</string>
    <string name="sos">SOS</string>
    <string name="reminder">REMINDER</string>
    <string name="home">HOME</string>
    <string name="mic">MIC</string>
    <string name="menu">MENU</string>
    <string name="Contact">NEW CONTACT</string>
    <string name="addContact">ADD CONTACTS </string>
    <string name="name">NAME</string>
    <string name="save">SAVE</string>
    <string name="mbno">MOBILE NO</string>
    <string name="notification_channel_id">NOTIFICATION</string>



        <!-- Medicine Reminder -->
        <string name="medicine_reminder">Medicine Reminder</string>
        <string name="et_med_name">Medicine Name</string>
        <string name="med_dose_hint">Medicine Dose</string>
        <string name="med_timing">Medicine Timing</string>
        <string name="save_med_reminder">Save Medicine Reminder</string>

        <!-- Doctor Appointment Reminder -->
        <string name="doctor_reminder">Doctor Appointment Reminder</string>
        <string name="doc_name_hint">Doctor Name</string>
        <string name="doc_time_hint">Appointment Time</string>
        <string name="doc_location_hint">Appointment Location</string>
        <string name="save_doc_reminder">Save Doctor Reminder</string>

        <!-- Common Strings -->
        <string name="fill_all_fields_error">Please fill in all the fields.</string>
        <string name="medicine_data_saved">Medicine reminder saved successfully.</string>
        <string name="error_medicine_data">Failed to save medicine reminder data.</string>
        <string name="doctor_data_saved">Doctor reminder saved successfully.</string>
        <string name="error_doctor_data">Failed to save doctor reminder data.</string>
        <string name="medicine_reminder_scheduled">Medicine reminder scheduled.</string>
        <string name="doctor_reminder_scheduled">Doctor reminder scheduled.</string>

        <!-- Notification Channel -->
        <string name="reminder_channel_name">Reminder Channel</string>
        <string name="reminder_channel_description">Channel for reminder notifications</string>
    <string name="channel_name">Reminder Channel</string>
    <string name="channel_description">Notification Channel for Reminders</string>


</resources>