<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/contactImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/add_image" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactImageView"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/mobileEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:hint="@string/mbno" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_below="@id/mobileEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@color/black"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="22sp" />

</RelativeLayout>
