<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/top_view"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="@drawable/capture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/top_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rowCount="3"
        app:columnCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/contact_list_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <!-- Card content -->
            <!-- You can customize the content based on your requirements -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@mipmap/contact" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_list" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Top right card -->


        <!-- Bottom left card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/sos_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <!-- Card content -->
            <!-- You can customize the content based on your requirements -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@mipmap/sos1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sos" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Bottom right card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/reminder_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <!-- Card content -->
            <!-- You can customize the content based on your requirements -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@mipmap/reminder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Bottom left button -->
        <androidx.cardview.widget.CardView
            android:id="@+id/mic_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <!-- Button content -->
            <!-- You can customize the content based on your requirements -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@mipmap/mic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mic" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <!-- Bottom right button -->
        <androidx.cardview.widget.CardView
            android:id="@+id/menu_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <!-- Button content -->
            <!-- You can customize the content based on your requirements -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@mipmap/menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_Logout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <!-- Card content -->
            <!-- You can customize the content based on your requirements -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@mipmap/logout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Logout" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
